[tool.poetry]
name = "extraflow"
version = "0.1.0"
description = ""
authors = ["minato-ellie <82735346+minato-ellie@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numba = "^0.56.4"
mlflow = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
nox = "^2022.11.21"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
